--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <body>
 <div class="container"></div>
 </body>
-<script src="/bundle.js"></script>
+<script src="/build/bundle.js"></script>
 </html>
